[Feat]: Refactor HUD and related classes by commenting out unused variables and methods, and adding TODOs for future review, all to make SonarQube happy